# outsider_finder

./: .gitignore  README.md  app.py  logger.py  pyproject.toml  requirements.txt  run.sh
