[tool.poetry]
name = "talent_detector"
version = "0.1.0"
description = "Talent detector helps you find football talents thanks to outlier detection algorithms"
authors = ["hadisotudeh <hadisotudeh1992@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
streamlit = "^0.75.0"
scikit-learn = "^0.24.1"
unidecode = "^1.1.2"
rich = "^9.9.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
